# matrix

./: .travis.yml  CMakeLists.txt  README.md  humanity.h  lib.h  main.cpp  pain.h
